# competitool

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  our_stack.yaml  pyproject.toml
analyzers/: base.py  contextual_signal.py  contextual_taxonomy.yaml  gam_floor_waterfall.py  identity.py  ima.py  prebid.py  timing.py  vast.py
api/: main.py  models.py  routes.py
capture/: cmp.py  lifecycle.py  probe.js  stealth.py  worker.py
entrypoints/: api.sh  worker.sh
report/: aggregator.py  delta.py  renderer.py  scorecard.py
storage/: artifacts.py  db.py
tests/: test_contextual_signal.py  test_gam_floor_waterfall.py  test_identity.py  test_ima.py  test_prebid.py  test_timing.py  test_vast.py
tests/fixtures/: sample_har.json  sample_vast_inline.xml  sample_vast_wrapper.xml
worker/: tasks.py
