[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "competitool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "rq>=1.16",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
